--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 			</div>
 
 			<div class="game-cards">
-				
+
 			</div>
 		</div>
 
 	</main>
 
 </body>
-<script type="module" src="/js/index.js"></script>
+<script type="module" src="./js/index.js"></script>
 
 </html>
