--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 	</main>
 
 </body>
-<script type="module" src="./js/index.js"></script>
+<script type="module" src="js/index.js"></script>
 
 </html>
